chore(deps): добавление нового модуля и конфигурации Docker
Изменения включают:
- Обновление package.json и package-lock.json для нового модуля
- Добавление соответствующей команды в docker-compose.yml

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,6 +15,7 @@ services:
           npm install -g -D firebase-tools
           npx nuxi@latest module add tailwindcss
           npm i pinia @pinia/nuxt
+          npm install uuid
         fi;
         npm run dev -- --host
       "
