--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@pinia/nuxt": "^0.9.0",
     "firebase": "^11.1.0",
+    "firebase-admin": "^13.0.2",
     "nuxt": "^3.14.1592",
     "pinia": "^2.3.0",
-    "uuid": "^11.0.3",
     "vue": "latest",
     "vue-router": "latest"
   }
