--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 FIREBASE_CONFIG_API_KEY: "SomeApiKey"
+FIREBASE_CONFIG_PROJECT_ID: "myproject-123456"
 FIREBASE_CONFIG_MESSAGING_SENDER_ID: "SomeSenderId"
 FIREBASE_CONFIG_APP_ID: "SomeAppId"
+
+FIREBASE_CONFIG_ADMIN_CREDENTIALS={"your":"credentials"}
